[UPDATE] application.yml update 230427 1559

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 mybatis:
-  type-aliases-package: com.ssafy.*.model
+  type-aliases-package: com.ssafy.enjoytrip.*.model
   mapper-locations: mapper/**.xml
 
 server:
