[ADD] 관광지 정보 조회 로직 추가 230501 1800

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,12 @@ server:
   port: 80
 
 
-spring :
-  mvc : 
-    view :
-      prefix : /WEB-INF/views/
-      suffix : .jsp
+spring:
+  mvc: 
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
+    static-path-pattern: /resources/static/**
 
 
 
